--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="help">help</string>
     <string name="hello_world">Hello world!</string>
-
+<string name="send">发送</string>
 </resources>
